Fri Nov 12 11:52:14 1999  Lyndon Tremblay <ltremblay@mezzanine.xnot.com>

	* rules.make: Moved some Java rules into gstep-java.
	
Fri Nov 12  7:43:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.sh.in: Fix error in exporting CLASSPATH

Fri Nov 12  6:36:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* which_lib.c: Fix for bug reported by Pascal Bourguignon.
	If 'shared=no' and 'debug=yes', but no debug library exists, then
	find a static library.

Thu Nov 11 12:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.csh.in: Fix for typo reported by Pascal Bourguignon.

1999-11-11  David Lazaro Saz  <khelekir@encomix.es>

	* configure.in (objc_thread_lib): Added support for FreeBSD native
	POSIX threads (from libc_r).  Made this the first option to test as
	this is the best working one.
	* configure: New build to support the above mentioned.

Wed Nov 10 12:05:16 1999  Lyndon Tremblay <ltremblay@mezzanine.xnot.com>

	* library.make: Added some uninstalling commands, specifically,
	when the 'LIBRARY_NAME.so' file links to 'LIBRARY_NAME_d.so',
	remove that stale link. (using if [ ! -e <link ], maybe that's wrong,
	but it works)
	* rootinstall.sh: changed rooot to root.
	* tool.make: Also added install commands here, to remove the
	'GNUSTEP_INSTALLATION_DIR/Tools/<toolname>' script as well as the
	real tool binary.
	
Mon Nov 08 11:41:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* names.make: Fix to run config scripts in /tmp in order to avoid
	directory permission problems in current directory.

Sun Nov 07 14:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* common.make: define GSWARN unless 'warn=no' is on command line.

Fri Nov 05 11:23:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* application.make: Added comment about including info.plist stuff.
	* bundle.make: Added support for inclusion of info.plist stuff.
