@@ -45,6 +45,7 @@ endif
 #
 if ( ! ${?GNUSTEP_HOST} ) then
   setenv GNUSTEP_HOST `(cd /tmp; ${GNUSTEP_SYSTEM_ROOT}/Makefiles/config.guess)`
+  setenv GNUSTEP_HOST `(cd /tmp; ${GNUSTEP_SYSTEM_ROOT}/Makefiles/config.sub ${GNUSTEP_HOST})`
 endif
 setenv GNUSTEP_HOST_CPU `${GNUSTEP_SYSTEM_ROOT}/Makefiles/cpu.sh $GNUSTEP_HOST`
 setenv GNUSTEP_HOST_VENDOR `${GNUSTEP_SYSTEM_ROOT}/Makefiles/vendor.sh $GNUSTEP_HOST`
