@@ -132,6 +132,7 @@ fi
 #
 if [ -z "$GNUSTEP_HOST" ]; then
     GNUSTEP_HOST=`$GNUSTEP_SYSTEM_ROOT/Makefiles/config.guess`
+    GNUSTEP_HOST=`$GNUSTEP_SYSTEM_ROOT/Makefiles/config.sub $GNUSTEP_HOST`
     export GNUSTEP_HOST
 fi
 if [ -z "$GNUSTEP_HOST_CPU" ]; then
